--- a/src/ElmTest.SqlServer/ElmTest.Infrastructure.csproj
+++ b/src/ElmTest.SqlServer/ElmTest.Infrastructure.csproj
@@ -10,4 +10,13 @@
     <ProjectReference Include="..\ElmTest.Domain\ElmTest.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dapper\" />
+    <Folder Include="EF\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+  </ItemGroup>
+
 </Project>
