--- a/src/ElmTest.API/appsettings.json
+++ b/src/ElmTest.API/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
+    "ReadConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
+    "ReadWriteConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;"
   },
   "AllowedHosts": "*"
 }
