--- a/src/ElmTest.API/appsettings.json
+++ b/src/ElmTest.API/appsettings.json
@@ -10,5 +10,9 @@
     "ReadConnection": "Data Source=10.5.54.200;Database=Tdb;Persist Security Info=True;User ID=devteam;Password=12345678;MultipleActiveResultSets=True;encrypt=true;TrustServerCertificate=true",
     "ReadWriteConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "redis": {
+    "server": "localhost:6379",
+    "password":  ""
+  }
 }
