fix all pesky CORS issues in angular by using proxy

--- a/src/ElmTest.Web/angular.json
+++ b/src/ElmTest.Web/angular.json
@@ -72,7 +72,8 @@
               "buildTarget": "ElmTest.Web:build:production"
             },
             "development": {
-              "buildTarget": "ElmTest.Web:build:development"
+              "buildTarget": "ElmTest.Web:build:development",
+              "proxyConfig": "proxy.conf.js"
             }
           },
           "defaultConfiguration": "development"
