--- a/src/ElmTest.API/appsettings.json
+++ b/src/ElmTest.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
-    "ReadConnection": "Data Source=10.5.54.200;Database=Tdb;Persist Security Info=True;User ID=devteam;Password=12345678;MultipleActiveResultSets=True;encrypt=true;TrustServerCertificate=true",
+    //"ReadConnection": "Data Source=10.5.54.200;Database=Tdb;Persist Security Info=True;User ID=devteam;Password=12345678;MultipleActiveResultSets=True;encrypt=true;TrustServerCertificate=true",
+    "ReadConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
     "ReadWriteConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;"
   },
   "AllowedHosts": "*",
