--- a/src/ElmTest.API/appsettings.json
+++ b/src/ElmTest.API/appsettings.json
@@ -7,13 +7,39 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
-    //"ReadConnection": "Data Source=10.5.54.200;Database=Tdb;Persist Security Info=True;User ID=devteam;Password=12345678;MultipleActiveResultSets=True;encrypt=true;TrustServerCertificate=true",
-    "ReadConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
+    "ReadConnection": "Data Source=10.5.54.200;Database=Tdb;Persist Security Info=True;User ID=devteam;Password=12345678;MultipleActiveResultSets=True;encrypt=true;TrustServerCertificate=true",
+    //"ReadConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;",
     "ReadWriteConnection": "Data Source=.;Initial Catalog=ElmTestDb;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=OcP2020123;Encrypt=False;"
   },
   "AllowedHosts": "*",
   "redis": {
     "server": "localhost:6379",
-    "password":  ""
+    "password": ""
+  },
+  "security": {
+    "type": "api-key",
+    "api-key": "6bd870cd-ed9c-42d0-97d9-975f7126f7ea"
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "ElmTest.API"
+    }
   }
+
 }
