--- a/src/ElmTest.API/ElmTest.API.csproj
+++ b/src/ElmTest.API/ElmTest.API.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Serilog" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
@@ -16,10 +18,6 @@
     <ProjectReference Include="..\ElmTest.Application.Contracts\ElmTest.Application.Contracts.csproj" />
     <ProjectReference Include="..\ElmTest.Application\ElmTest.Application.csproj" />
     <ProjectReference Include="..\ElmTest.Shared\ElmTest.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
