--- a/src/ElmTest.Application/ElmTest.Application.csproj
+++ b/src/ElmTest.Application/ElmTest.Application.csproj
@@ -10,12 +10,14 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+    <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ElmTest.Application.Contracts\ElmTest.Application.Contracts.csproj" />
     <ProjectReference Include="..\ElmTest.Domain\ElmTest.Domain.csproj" />
+    <ProjectReference Include="..\ElmTest.Shared\ElmTest.Shared.csproj" />
     <ProjectReference Include="..\ElmTest.SqlServer\ElmTest.Infrastructure.csproj" />
   </ItemGroup>
 
