Add serilog rolling file config

--- a/src/ElmTest.API/appsettings.json
+++ b/src/ElmTest.API/appsettings.json
@@ -32,7 +32,9 @@
         "Name": "File",
         "Args": {
           "path": "Logs/applog-.txt",
-          "rollingInterval": "Day"
+          "rollingInterval": "Day",
+          "FileSizeLimitBytes": 500000,
+          "RollOnFileSizeLimit":  true
         }
       }
     ],
